<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_new_recipes"
            android:icon="@drawable/newrecipe"
            android:title="@string/new_recipes" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/cart"
            android:title="@string/my_carts" />
    </group>
</menu>