<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tsb.getmyfood.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.tsb.getmyfood.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.tsb.getmyfood.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_new_recipes"
        android:name="com.tsb.getmyfood.ui.newrecipes.NewRecipesFragment"
        android:label="@string/new_recipes"
        tools:layout="@layout/fragment_new_recipes" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.tsb.getmyfood.ui.myorders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.tsb.getmyfood.ui.cart.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />

    <action
        android:id="@+id/action_homeFragment_to_categoryFragment"
        app:destination="@id/nav_category" />

    <action
        android:id="@+id/action_homeFragment_to_newRecipesFragment"
        app:destination="@id/nav_new_recipes" />

</navigation>