<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signUp"
    android:background="@color/white">

    <TextView
        android:id="@+id/labelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/topHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/wotxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topHolder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelView">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/user_plus"
            android:paddingStart="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:ems="10"
            android:hint="Enter Your Name"
            android:inputType="text"
            android:paddingTop="@dimen/_15sdp"
            android:textSize="@dimen/_18ssp" />

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/mail"
            android:paddingStart="@dimen/_5sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:ems="10"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_15sdp"
            android:textSize="@dimen/_18ssp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:ems="10"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_15sdp"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp"/>

        <TextView
            android:id="@+id/OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="Already have an account?"
            android:textAlignment="center"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>